fix: fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   height: 100vh;
   width: 100vw;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
   
 }
 
